PMD Update v2
Modifications to various classes