@@ -5,6 +5,7 @@
 package edu.njit.decaf2.data;
 
 import java.util.HashMap;
+import java.util.Map;
 
 import edu.njit.decaf2.DECAF;
 
@@ -23,7 +24,7 @@ public class FailureNode extends DECAF {
 	private double[] failureRates;
 	private double[] repairRates;
 
-	private HashMap<String, Double> cascadingFailures = new HashMap<String, Double>();
+	private Map<String, Double> cascadingFailures = new HashMap<String, Double>();
 
 	/**
 	 * Sets {@link String} {@code type} and {@link Double}[]
@@ -32,9 +33,9 @@ public class FailureNode extends DECAF {
 	 * @param type
 	 * @param failureRates
 	 */
-	public FailureNode(String type, double[] failureRates) {
-		setType(type);
-		setFailureRates(failureRates);
+	public FailureNode(final String type, final double[] failureRates) {
+		this.type = type;
+		this.failureRates = failureRates;
 	}
 
 	/**
@@ -47,12 +48,14 @@ public class FailureNode extends DECAF {
 	 * @param redundancy
 	 * @param failureRate
 	 */
-	public FailureNode(int required, String type, int redundancy, double[] failureRates, double[] repairRates) {
-		setRequired(required);
-		setType(type);
-		setRedundancy(redundancy);
-		setFailureRates(failureRates);
-		setRepairRates(repairRates);
+	public FailureNode(final int required, final String type, final int redundancy, final double[] failureRates,
+			final double[] repairRates) {
+		super();
+		this.required = required;
+		this.type = type;
+		this.redundancy = redundancy;
+		this.failureRates = failureRates;
+		this.repairRates = repairRates;
 	}
 
 	/**
@@ -60,8 +63,8 @@ public class FailureNode extends DECAF {
 	 * 
 	 * @param type
 	 */
-	public FailureNode(String type) {
-		setType(type);
+	public FailureNode(final String type) {
+		this.type = type;
 	}
 
 	/**
@@ -75,7 +78,7 @@ public class FailureNode extends DECAF {
 	 * @param type
 	 *            the type to set
 	 */
-	public void setType(String type) {
+	public void setType(final String type) {
 		this.type = type;
 	}
 
@@ -90,7 +93,7 @@ public class FailureNode extends DECAF {
 	 * @param required
 	 *            the required to set
 	 */
-	public void setRequired(int required) {
+	public void setRequired(final int required) {
 		this.required = required;
 	}
 
@@ -105,7 +108,7 @@ public class FailureNode extends DECAF {
 	 * @param redundancy
 	 *            the redundancy to set
 	 */
-	public void setRedundancy(int redundancy) {
+	public void setRedundancy(final int redundancy) {
 		this.redundancy = redundancy;
 	}
 
@@ -120,7 +123,7 @@ public class FailureNode extends DECAF {
 	 * @param failureRate
 	 *            the failureRate to set
 	 */
-	public void setFailureRates(double[] failureRates) {
+	public void setFailureRates(final double[] failureRates) {
 		this.failureRates = failureRates;
 	}
 
@@ -135,14 +138,14 @@ public class FailureNode extends DECAF {
 	 * @param repairRates
 	 *            the repairRates to set
 	 */
-	public void setRepairRates(double[] repairRates) {
+	public void setRepairRates(final double[] repairRates) {
 		this.repairRates = repairRates;
 	}
 
 	/**
 	 * @return the cascadingFailures
 	 */
-	public HashMap<String, Double> getCascadingFailures() {
+	public Map<String, Double> getCascadingFailures() {
 		return cascadingFailures;
 	}
 
@@ -150,7 +153,7 @@ public class FailureNode extends DECAF {
 	 * @param cascadingFailures
 	 *            the cascadingFailures to set
 	 */
-	public void setCascadingFailures(HashMap<String, Double> cascadingFailures) {
+	public void setCascadingFailures(final Map<String, Double> cascadingFailures) {
 		this.cascadingFailures = cascadingFailures;
 	}
 
@@ -161,7 +164,7 @@ public class FailureNode extends DECAF {
 	 * @param type
 	 * @param rate
 	 */
-	public void addCascadingFailure(FailureNode node, double rate) {
+	public void addCascadingFailure(final FailureNode node, final double rate) {
 		cascadingFailures.put(node.getType(), rate);
 	}
 
@@ -170,23 +173,27 @@ public class FailureNode extends DECAF {
 	 * 
 	 * @param type
 	 */
-	public void removeCascadingFailure(FailureNode type) {
+	public void removeCascadingFailure(final FailureNode type) {
 		cascadingFailures.remove(type);
 	}
 
-	public double getRate(String type2) {
+	public double getRate(final String type2) {
 		return cascadingFailures.get(type2);
 	}
 
 	@Override
 	public String toString() {
-		String cascadePrint = "--Causes to fail (" + cascadingFailures.size() + ") ";
+		final StringBuffer cascadePrint = new StringBuffer("--Causes to fail (" + cascadingFailures.size() + ") ");
 		for (String k : cascadingFailures.keySet()) {
-			cascadePrint += "\n\t\t\t" + k + " @ " + cascadingFailures.get(k);
+			cascadePrint.append("\n\t\t\t");
+			cascadePrint.append(k);
+			cascadePrint.append(" @ ");
+			cascadePrint.append(cascadingFailures.get(k));
 		}
-		String failurePrint = "";
+		final StringBuffer failurePrint = new StringBuffer();
 		for (int i = 0; i < failureRates.length; i++) {
-			failurePrint += ", " + failureRates[i];
+			failurePrint.append(", ");
+			failurePrint.append(failureRates[i]);
 		}
 		return error("--FailureNode \t\t" + type + " @ " + failurePrint.substring(2) + "\n--Required \t\t" + required
 				+ "\n--Redundancy \t\t" + redundancy + "\n" + cascadePrint);
@@ -194,24 +201,26 @@ public class FailureNode extends DECAF {
 
 	@Override
 	public int hashCode() {
-		int result = type.hashCode() + failureRates.hashCode() + new Integer(redundancy).hashCode()
-				+ new Integer(required).hashCode();
+		int result = type.hashCode() + failureRates.hashCode() + Integer.valueOf(redundancy).hashCode()
+				+ Integer.valueOf(required).hashCode();
 
 		for (String k : cascadingFailures.keySet()) {
-			result += k.hashCode() + new Double(cascadingFailures.get(k)).hashCode();
+			result += k.hashCode() + Double.valueOf(cascadingFailures.get(k)).hashCode();
 		}
-		return new Integer(result).hashCode();
+		return Integer.valueOf(result).hashCode();
 	}
 
 	@Override
-	public boolean equals(Object o) {
-		if (!(o instanceof FailureNode))
+	public boolean equals(final Object obj) {
+		if (!(obj instanceof FailureNode)){
 			return false;
+		}
 
-		FailureNode other = (FailureNode) o;
+		final FailureNode other = (FailureNode) obj;
 		if (!type.equals(other.type) || redundancy != other.redundancy || required != other.required
-				|| failureRates != other.failureRates || cascadingFailures.size() != other.cascadingFailures.size())
+				|| failureRates != other.failureRates || cascadingFailures.size() != other.cascadingFailures.size()){
 			return false;
+		}
 		for (String k : cascadingFailures.keySet()) {
 			if (!other.cascadingFailures.containsKey(k) || cascadingFailures.get(k) != other.cascadingFailures.get(k)) {
 				return false;
